--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <meta name="google" content="notranslate" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <!--
